<resources>
    <string name="app_name">CinemaApp</string>
    <string name="facebook_app_id">750139688958677</string>
    <string name="fb_login_protocol_scheme">fb750139688958677</string>

    <string-array name="film">
        <item>Phim đang chiếu</item>
        <item>Phim sắp chiếu</item>
    </string-array>
    <string name="simple_text">Bộ phim mở đầu với cảnh thủ lĩnh Hung Nô, Thiền Vu đen tối sang xâm lược Trung Quốc. Hoàng đế Trung Hoa ra lệnh cho Nguyên soái truyền xuống mỗi gia đình phải có một người đàn ông đi lính. Cảnh sau đó chuyển sang nhà họ Hoa, khi cô con gái duy nhất của họ, Mộc Lan đang chuẩn bị để đi gặp bà mối. Cô đã chuẩn bị sẵn sàng nhưng thật không may cô lại thất bại trong cuộc khảo sát của bà mối. Cha cô, ông Hoa Hồ an ủi cô đúng khi quân đội đưa lệnh đi lính đến. Do không có con trai, Hoa Hồ đã ghi tên vào danh sách bất chấp tuổi tác và bệnh tật của mình. Mộc Lan đã cải trang thành con trai và đi thế chỗ cha mình. Mộc Tu, một con rồng nhỏ đã đi cùng cô để lấy lại chức tước ban đầu của mình trong tổ tiên nhà họ Hoa bằng cách biến Mộc Lan thành anh hùng. Rồng ta thêm một người bạn đồng hành là chú dế Cri-kee "may mắn". Mộc Lan đến trại lính, theo sự hướng dẫn để trở thành đàn ông của Mộc Tu nhưng đã vô ý gây ra cuộc ẩu đả trong trại. Trong một lều gần đó, Lý nguyên soái đã thăng cấp cho con trai mình - Lý Tường - lên làm tướng quân và cho anh huấn luyện toán quân mới trong khi ông chặn quân của Thiền Vu ở cửa ải gần đó. Lý Tường ngăn cuộc ẩu đả và hỏi tên Mộc Lan, cô nói mình tên "Ping". Lý Tường bắt đầu một khóa huấn luyện kiệt sức và thực sự thất vọng vì khả năng của các tân binh. Anh ra lệnh cho Mộc Lan trở về nhà, nhưng cô đã khiến anh ấn tượng khi trèo lên cây cột cao với hai dây buộc đồng thau ở hai bên tay để lấy xuống mũi tên mà anh đã bắn lên đó. Đội lính mới được việc đó thôi thúc, đã trở thành nhóm lính giỏi. A Nghiêu, A Ninh và Kim Bảo (A Nghiêu và A Ninh từng ẩu đả với Mộc Lan) trở thành bạn của cô.

Mộc Tu làm giả một bức thư, ra lệnh cho Lý Tường đưa quân tới cửa ải. Đội quân nhổ trại đi gặp Nguyên soái Lý, nhưng khi đến nơi thì ngôi làng ở cửa ải đã bị thiêu rụi và đội quân của Nguyên soái đã bị giết sạch, chính Nguyên soái cũng tử trận. Sau khi bớt bàng hoàng, đội quân của Lý Tường quay về gặp Hoàng đế. Trên đường đi, Mộc Tu vô tình làm nổ một quả pháo khiến vị trí của cả đoàn quân bị quân Hung Nô phát hiện. Thiền Vu dẫn quân của mình ồ ạt tấn công toán quân của Lý Tường và chém được một nhát vào người Mộc Lan. Mộc Lan liền dùng quả pháo cuối cùng gây ra trận lở tuyết và chôn vùi toàn bộ quân Hung Nô dưới tuyết. Mộc Lan cứu Lý Tường và toán quân được an toàn. Cô ngất đi sau đó do vết thương của mình và trong khi chữa trị, cô bị lộ ra là phụ nữ. Tứ Phúc, cố vấn của Hoàng đế, yêu cầu Lý Tường xử tử Mộc Lan, nhưng anh tha cho cô vì ơn cứu mạng, cô bị đuổi khỏi nhóm lính. Đoàn quân quay lại kinh thành. Mộc Lan và Mộc Tu nói chuyện về lý do họ ở đây: chú rồng muốn được trở lại vị trí của mình trong hàng ngũ tổ tiên, cô thì muốn chứng minh mình có thể làm điều gì đó "cho ra hồn". Khi họ chuẩn bị đi, Thiền Vu cùng 5 tên lính còn lại ngoi lên từ đám tuyết và tiến về kinh thành. Mộc Lan đi theo về để cảnh báo Lý Tường.

Tại kinh thành, đội lính của Lý Tường được chào đón bằng màn diễu hành và được tung hô là "Người hùng của Trung Hoa", nhưng chẳng ai thấy vui trừ Tứ Phúc, họ vẫn còn kinh ngạc về Mộc Lan. Lý Tường rất ngạc nhiên khi thấy Mộc Lan nhưng không nghe lời cảnh báo của cô. Mộc Lan thuyết phục người dân nhưng họ cũng không nghe. Mộc Tu nhắc cho cô nhớ rằng giờ cô là phụ nữ nên chẳng ai chịu nghe cô cả. Lý Tường dâng thanh gươm của Thiền Vu cho Hoàng đế, nhưng con chim ưng của Thiền Vu quắp lấy nó từ tay Lý Tường và mang tới cho chủ nhân đang ở trên nóc cung điện. Thiền Vu cùng toán quân của hắn bắt Hoàng đế và rút vào cung điện. Mộc Lan dẫn Lý Tường và A Nghiêu, A Ninh, Kim Bảo (3 người cải trang thành cung nữ) vào cung bằng đường khác. Sau trận đánh nhau trong cung điện, Mộc Lan dụ được Thiền Vu lên nóc cung điện và khiến hắn mất mạng khi bị quả pháo của Mộc Tu bắn trúng. Hoàng đế và toàn thể mọi người đều kính trọng Mộc Lan. Hoàng đế đưa cô con dấu của mình, ý muốn cô trở thành người nối nghiệp, nói cách khác, trở thành "Công chúa của Trung Hoa". Cô cũng được trao thanh gươm của Thiền Vu để chứng minh công lao của mình.

Mộc Lan trở về nhà, trao cho cha những thứ đó, nhưng ông Hoa Hồ đã vứt chúng sang một bên, ôm lấy cô và nói rằng: "Có được người con gái như con chính là món quà tuyệt vời nhất". Lý Tường, được Hoàng đế khuyên rằng: "Khanh sẽ không gặp được người phụ nữ nào như thế mỗi triều đại đâu", đã đi tìm cô dưới cái cớ trả lại mũ trụ. Anh đồng ý lời mời ăn tối của cô. Để trả công cho việc đã giúp Mộc Lan, tổ tiên đời thứ nhất của nhà họ Hoa đã trao lại chức vụ cho Mộc Tu. Sau đó, Mộc Tu, Cri-kee cùng những tổ tiên khác ăn mừng theo một bữa tiệc mang phong cách hiện đại </string>
    <string name="noidung_tiectrang_mau">
        Trong buổi họp mặt của nhóm bạn thân, một thành viên bất ngờ đề xuất trò chơi chia sẻ điện thoại nhằm tăng tinh thần “đoàn kết”. Từ đó, những góc khuất của từng người dần hé lộ và khiến cho mối quan hệ vốn khắng khít của họ bắt đầu lay chuyển .
    </string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nam">Nam</string>
    <string name="Nu">Nữ</string>
    <string name="trangchu">Trang chủ</string>
    <string name="theoPhim">Đặt vé theo Phim</string>
    <string name="theoRap">Đặt vé theo Rạp</string>
    <string name="veCuaToi">Vé của Tôi</string>
    <string name="rap">Rạp</string>
    <string name="dangnhap_dangky">Đăng nhập/Đăng ký</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="Adres">
        <item>TP HCM</item>
        <item>Quận 1</item>
        <item>Quận 2</item>
        <item>Quận 3</item>
        <item>Bình Thạnh</item>
    </string-array>
    <string-array name="loai">
        <item>Định dạng</item>
        <item>phim 2D</item>
        <item>phim 3D</item>
    </string-array>
</resources>
